# hybrid-mcp-boilerplate

./: .env.example  .gitignore  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
iac/github-actions/: iac-deploy.yml  iac-plan.yml
iac/scripts/: bootstrap.sh
iac/terraform/aws/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
iac/terraform/aws/backends/: dev.conf  prod.conf
iac/terraform/aws/envs/: dev.tfvars  prod.tfvars
iac/terraform/azure/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
iac/terraform/azure/backends/: dev.conf  prod.conf
iac/terraform/azure/envs/: dev.tfvars  prod.tfvars
iac/terraform/gcp/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
iac/terraform/gcp/backends/: dev.conf  prod.conf
iac/terraform/gcp/envs/: dev.tfvars  prod.tfvars
src/: settings.py
src/api/: __init__.py  app.py
src/api/routers/: words.py
src/mcp/: __init__.py  app.py
src/mcp/tools/: words.py
src/services/: words.py
